tests/golden/type_errors/array_any_non_array.cd
any(1, fun (value) { return true; });
