tests/golden/type_errors/array_any_non_array.err
Type error at 1:36: any expects array as first argument, got number
  any(1, fun (value) { return true; });
                                     ^
